// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store:serverProcess:middlewares:documents:makeOnOpenView ask for confirmation before opening a view that has already been opened 1`] = `Array []`;

exports[`store:serverProcess:middlewares:documents:makeOnOpenView open filepicker, then cancel opening view 1`] = `
Array [
  Object {
    "payload": Object {
      "absolutePath": undefined,
    },
    "type": "WS_ASK_OPEN_VIEW",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "options": Object {
        "filters": Array [
          Object {
            "extensions": Array [
              "vitv",
              "vipv",
              "vidv",
              "vidp",
              "vimv",
              "vikv",
              "vihv",
              "viga",
              "viba",
              "pus03",
              "pus05",
              "pus11",
              "pus12",
              "pus13",
              "pus14",
              "pus15",
              "pus18",
              "pus19",
              "pus140",
              "pus142",
              "pus144",
              "pusmme",
            ],
            "name": "Any VIMA views",
          },
          Object {
            "extensions": Array [
              "vitv",
            ],
            "name": "TextView",
          },
          Object {
            "extensions": Array [
              "vipv",
            ],
            "name": "PlotView",
          },
          Object {
            "extensions": Array [
              "vidv",
            ],
            "name": "DynamicView",
          },
          Object {
            "extensions": Array [
              "vidp",
            ],
            "name": "DecommutedPacketView",
          },
          Object {
            "extensions": Array [
              "vimv",
            ],
            "name": "MimicView",
          },
          Object {
            "extensions": Array [
              "vikv",
            ],
            "name": "PacketView",
          },
          Object {
            "extensions": Array [
              "vihv",
            ],
            "name": "HistoryView",
          },
          Object {
            "extensions": Array [
              "viga",
            ],
            "name": "GroundAlarmView",
          },
          Object {
            "extensions": Array [
              "viba",
            ],
            "name": "OnboardAlarmView",
          },
          Object {
            "extensions": Array [
              "pus03",
            ],
            "name": "PUS03View",
          },
          Object {
            "extensions": Array [
              "pus05",
            ],
            "name": "PUS05View",
          },
          Object {
            "extensions": Array [
              "pus11",
            ],
            "name": "PUS11View",
          },
          Object {
            "extensions": Array [
              "pus12",
            ],
            "name": "PUS12View",
          },
          Object {
            "extensions": Array [
              "pus13",
            ],
            "name": "PUS13View",
          },
          Object {
            "extensions": Array [
              "pus14",
            ],
            "name": "PUS14View",
          },
          Object {
            "extensions": Array [
              "pus15",
            ],
            "name": "PUS15View",
          },
          Object {
            "extensions": Array [
              "pus18",
            ],
            "name": "PUS18View",
          },
          Object {
            "extensions": Array [
              "pus19",
            ],
            "name": "PUS19View",
          },
          Object {
            "extensions": Array [
              "pus140",
            ],
            "name": "PUS140View",
          },
          Object {
            "extensions": Array [
              "pus142",
            ],
            "name": "PUS142View",
          },
          Object {
            "extensions": Array [
              "pus144",
            ],
            "name": "PUS144View",
          },
          Object {
            "extensions": Array [
              "pusmme",
            ],
            "name": "PUSMMEView",
          },
        ],
      },
      "type": "open",
      "windowId": "w1",
    },
    "type": "HSC_OPEN_DIALOG",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {},
    "type": "HSC_DIALOG_CLOSED",
  },
]
`;

exports[`store:serverProcess:middlewares:documents:makeOnOpenView open view 1`] = `
Array [
  Object {
    "payload": Object {
      "absolutePath": "/an/absolute/path",
    },
    "type": "WS_ASK_OPEN_VIEW",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "viewInfo": Object {
        "absolutePath": "/an/absolute/path",
      },
    },
    "type": "OPEN_VIEW",
  },
]
`;

exports[`store:serverProcess:middlewares:documents:makeOnOpenView open view using filepicker 1`] = `
Array [
  Object {
    "payload": Object {
      "absolutePath": undefined,
    },
    "type": "WS_ASK_OPEN_VIEW",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "options": Object {
        "filters": Array [
          Object {
            "extensions": Array [
              "vitv",
              "vipv",
              "vidv",
              "vidp",
              "vimv",
              "vikv",
              "vihv",
              "viga",
              "viba",
              "pus03",
              "pus05",
              "pus11",
              "pus12",
              "pus13",
              "pus14",
              "pus15",
              "pus18",
              "pus19",
              "pus140",
              "pus142",
              "pus144",
              "pusmme",
            ],
            "name": "Any VIMA views",
          },
          Object {
            "extensions": Array [
              "vitv",
            ],
            "name": "TextView",
          },
          Object {
            "extensions": Array [
              "vipv",
            ],
            "name": "PlotView",
          },
          Object {
            "extensions": Array [
              "vidv",
            ],
            "name": "DynamicView",
          },
          Object {
            "extensions": Array [
              "vidp",
            ],
            "name": "DecommutedPacketView",
          },
          Object {
            "extensions": Array [
              "vimv",
            ],
            "name": "MimicView",
          },
          Object {
            "extensions": Array [
              "vikv",
            ],
            "name": "PacketView",
          },
          Object {
            "extensions": Array [
              "vihv",
            ],
            "name": "HistoryView",
          },
          Object {
            "extensions": Array [
              "viga",
            ],
            "name": "GroundAlarmView",
          },
          Object {
            "extensions": Array [
              "viba",
            ],
            "name": "OnboardAlarmView",
          },
          Object {
            "extensions": Array [
              "pus03",
            ],
            "name": "PUS03View",
          },
          Object {
            "extensions": Array [
              "pus05",
            ],
            "name": "PUS05View",
          },
          Object {
            "extensions": Array [
              "pus11",
            ],
            "name": "PUS11View",
          },
          Object {
            "extensions": Array [
              "pus12",
            ],
            "name": "PUS12View",
          },
          Object {
            "extensions": Array [
              "pus13",
            ],
            "name": "PUS13View",
          },
          Object {
            "extensions": Array [
              "pus14",
            ],
            "name": "PUS14View",
          },
          Object {
            "extensions": Array [
              "pus15",
            ],
            "name": "PUS15View",
          },
          Object {
            "extensions": Array [
              "pus18",
            ],
            "name": "PUS18View",
          },
          Object {
            "extensions": Array [
              "pus19",
            ],
            "name": "PUS19View",
          },
          Object {
            "extensions": Array [
              "pus140",
            ],
            "name": "PUS140View",
          },
          Object {
            "extensions": Array [
              "pus142",
            ],
            "name": "PUS142View",
          },
          Object {
            "extensions": Array [
              "pus144",
            ],
            "name": "PUS144View",
          },
          Object {
            "extensions": Array [
              "pusmme",
            ],
            "name": "PUSMMEView",
          },
        ],
      },
      "type": "open",
      "windowId": "w1",
    },
    "type": "HSC_OPEN_DIALOG",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "choice": Array [
        "/the/chosen/one",
      ],
    },
    "type": "HSC_DIALOG_CLOSED",
  },
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "viewInfo": Object {
        "absolutePath": "/the/chosen/one",
      },
    },
    "type": "OPEN_VIEW",
  },
]
`;
